--- a/Rep6/TODO
+++ b/Rep6/TODO
@@ -2,8 +2,7 @@ TODO
 
 [OurGUI]
 	1. ルール編集時に表示される Suggestions の改良
-		a. 左右キーで捜査対象のコンポーネントの変更 (フォーカスの変更だと上手く行かない、、なぜ）
-		--- 時間があれば以下も ---
+		--- 時間があれば ---
 		b. フォーカスされているリストとされてないリストが分かるようにする
 			（たとえば選択領域の色を青色と灰色にして区別できるようにするとか）
 		c. 見栄えをきれいに？
